delete patient endpoint
